fix visibility

--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -4,7 +4,7 @@
 }
 
 .tooltip__bubble {
-    /*display: none;*/
+    display: none;
     width: 129px;
     padding: 13px 21px 8px;
     position: absolute;
